B-68612 Tech Debt: FDA: replace Collections.singletonMap() by Map.of()